objects/Account_Team_Non_SF__c.object
<CustomObject>
    <description>Contains the account team members who do not use Salesforce</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name the Non Salesforce User is related</description>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Group Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Prospect (Non BlueSTAR)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Group Account (Non BlueSTAR)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Team (Non-Salesforce.com Users)</relationshipLabel>
        <relationshipName>Account_Team_Non_SF</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member_Role__c</fullName>
        <description>Role of the Team member</description>
        <label>Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Management Support</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Account Specialist</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>AEP Processor</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health CAC</fullName>
                </value>
                <value>
                    <fullName>Benefit Coder</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Client Consulting Contact</fullName>
                </value>
                <value>
                    <fullName>Clinical Account Consultant</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Dearborn Sales Executive</fullName>
                </value>
                <value>
                    <fullName>Director Account Management</fullName>
                </value>
                <value>
                    <fullName>Director Sales</fullName>
                </value>
                <value>
                    <fullName>DVP Account Management</fullName>
                </value>
                <value>
                    <fullName>DVP Sales</fullName>
                </value>
                <value>
                    <fullName>EHCM Presenter</fullName>
                </value>
                <value>
                    <fullName>EHCM RFP SME</fullName>
                </value>
                <value>
                    <fullName>Electronic Eligibility Specialist</fullName>
                </value>
                <value>
                    <fullName>ENA Strategic Account Executive</fullName>
                </value>
                <value>
                    <fullName>Full Service Unit</fullName>
                </value>
                <value>
                    <fullName>GPD Director</fullName>
                </value>
                <value>
                    <fullName>GPD Group Benefit Specialist</fullName>
                </value>
                <value>
                    <fullName>GPD Marketing Service Representative</fullName>
                </value>
                <value>
                    <fullName>GPD Sales Executive/AE</fullName>
                </value>
                <value>
                    <fullName>Group Benefit Specialist</fullName>
                </value>
                <value>
                    <fullName>Implementation Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Team member of Account that doesnt have access to salesforce</description>
        <label>Team Member Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.In_Active__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Team Non SF</relationshipLabel>
        <relationshipName>Account_Team_Non_SF</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Team (Non-Salesforce.com User)</label>
    <nameField>
        <displayFormat>AT-{000}</displayFormat>
        <label>AT #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Teams (Non-Salesforce.com User)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>